--- a/.env_template
+++ b/.env_template
@@ -9,8 +9,8 @@ tts_auth=
 twitchSigningSecret=twitchSigningSecret # for notifications
 wolframalpha_appid=WOLFRAMALPHA_APPID # https://www.wolframalpha.com/
 webhook_url=DISCORD_WEBHOOK_URL # for stream online notifications
-websocket_clientid=CLIENT_ID # https://dev.twitch.tv/console
-websocket_authorization=Bearer WEBSOCKET_AUTHORIZATION # https://dev.twitch.tv/console
+twitch_clientid=CLIENT_ID # https://dev.twitch.tv/console
+twitch_authorization=Bearer TWITCH_AUTHORIZATION # https://dev.twitch.tv/console
 db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
