--- a/.env_template
+++ b/.env_template
@@ -11,6 +11,8 @@ wolframalpha_appid=WOLFRAMALPHA_APPID # https://www.wolframalpha.com/
 webhook_url=DISCORD_WEBHOOK_URL # for stream online notifications
 twitch_clientid=CLIENT_ID # https://dev.twitch.tv/console
 twitch_authorization=Bearer TWITCH_AUTHORIZATION # https://dev.twitch.tv/console
+supinic_userid=USERID # https://supinic.com/user/auth-key
+supinic_authkey=AUTHKEY # https://supinic.com/user/auth-key
 db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
