--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
+    "async-redis": "^1.1.7",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
@@ -27,7 +28,7 @@
     "pastebin-js": "^1.0.6",
     "pretty-ms": "^7.0.1",
     "pug": "^3.0.2",
-    "redis": "^3.1.0",
+    "redis": "^3.1.2",
     "request": "^2.88.2",
     "socket.io": "^3.1.0",
     "tinyurl": "^1.1.7",
