--- a/.env_template
+++ b/.env_template
@@ -13,6 +13,7 @@ twitch_clientid=CLIENT_ID # https://dev.twitch.tv/console
 twitch_authorization=Bearer TWITCH_AUTHORIZATION # https://dev.twitch.tv/console
 supinic_userid=USERID # https://supinic.com/user/auth-key
 supinic_authkey=AUTHKEY # https://supinic.com/user/auth-key
+bttv_auth=BTTV_AUTH
 db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
