--- a/.env_template
+++ b/.env_template
@@ -18,5 +18,6 @@ db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
 db_name=DB_NAME
+db_connectionLimit=20
 redis_port=REDIS_PORT
 port=PORT # for website/api/websocket
