--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "got": "^11.8.2",
     "http": "^0.0.1-security",
     "install": "^0.13.0",
-    "jstransformer-coffee-script": "^1.1.1",
-    "jstransformer-markdown-it": "^2.1.0",
     "mariadb": "^2.5.3",
     "mathjs": "^9.3.2",
     "moment": "^2.29.1",
@@ -34,11 +32,7 @@
   "author": "Supa",
   "license": "ISC",
   "description": "Twitch chat bot that provides a variety of fun and utility commands",
-  "devDependencies": {
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
-  },
+  "devDependencies": {},
   "directories": {
     "lib": "lib"
   },
