added bot owner login in .env so it can be easily change

--- a/.env_template
+++ b/.env_template
@@ -21,3 +21,4 @@ db_name=DB_NAME
 db_connectionLimit=20
 redis_port=REDIS_PORT
 port=PORT # for website/api/websocket
+owner_login=supa8 # YOUR TWITCH LOGIN (LOWERCASE USERNAME)
