--- a/.env_template
+++ b/.env_template
@@ -11,6 +11,7 @@ webhook_url=DISCORD_WEBHOOK_URL # for stream online notifications
 supinic_userid=USERID # https://supinic.com/user/auth-key
 supinic_authkey=AUTHKEY # https://supinic.com/user/auth-key
 bttv_auth=BTTV_AUTH
+stv_auth=7TV_AUTH
 db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
