use package "ioredis" instead of "redis"

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
-    "async-redis": "^2.0.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.9",
@@ -18,12 +17,12 @@
     "http": "^0.0.1-security",
     "humanize-duration": "^3.26.0",
     "install": "^0.13.0",
+    "ioredis": "^4.27.3",
     "mariadb": "^2.5.3",
     "mathjs": "^9.4.1",
     "moment": "^2.29.1",
     "pug": "^3.0.2",
     "reconnecting-websocket": "^4.4.0",
-    "redis": "^3.1.2",
     "request": "^2.88.2",
     "util": "^0.12.4",
     "winston": "^3.3.3",
