--- a/.env_template
+++ b/.env_template
@@ -2,6 +2,7 @@ botusername=okey_bot
 password=BOT_OAUTH_TOKEN
 userid=BOT_USERID
 clientid=BOT_CLIENTID
+app_clientid=APP_CLIENTID # https://dev.twitch.tv/console/apps
 website_url=http://bot_website.com
 weather_appid=APP_ID # https://openweathermap.org/
 default_prefix=?
