--- a/.env_template
+++ b/.env_template
@@ -20,4 +20,4 @@ db_name=DB_NAME
 db_connectionLimit=20
 redis_port=REDIS_PORT
 port=PORT # for website/api/websocket
-owner_login=supaeg # YOUR TWITCH LOGIN (LOWERCASE USERNAME)
+owner_login=8supa # YOUR TWITCH LOGIN (LOWERCASE USERNAME)
