add command "tenor"

--- a/.env_template
+++ b/.env_template
@@ -13,6 +13,7 @@ supinic_userid=USERID # https://supinic.com/user/auth-key
 supinic_authkey=AUTHKEY # https://supinic.com/user/auth-key
 bttv_auth=BTTV_AUTH
 stv_auth=7TV_AUTH
+tenor_key=TENOR_APIKEY
 db_host=DB_HOST
 db_user=DB_USER
 db_pass=DB_PASS
