dank spotify integration

--- a/config_template.json
+++ b/config_template.json
@@ -30,6 +30,10 @@
       "pass": "",
       "name": "Database Name",
       "connectionLimit": 50
+    },
+    "spotify": {
+      "clientId": "",
+      "clientSecret": ""
     }
   },
   "website": {
