--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mariadb": "^2.5.3",
     "moment": "^2.29.1",
     "ms": "^2.0.0",
+    "nanoid": "^3.1.29",
     "pug": "^3.0.2",
     "reconnecting-websocket": "^4.4.0",
     "request": "^2.88.2",
