--- a/config_template.json
+++ b/config_template.json
@@ -34,6 +34,9 @@
     "spotify": {
       "clientId": "",
       "clientSecret": ""
+    },
+    "twitter": {
+      "bearer": ""
     }
   },
   "website": {
