uberduck.ai integration

--- a/config_template.json
+++ b/config_template.json
@@ -37,6 +37,10 @@
     },
     "twitter": {
       "bearer": ""
+    },
+    "uberduck": {
+      "key": "",
+      "secret": ""
     }
   },
   "website": {
