--- a/config_template.json
+++ b/config_template.json
@@ -1,50 +1,56 @@
 {
-  "bot": {
-    "login": "okey_bot",
-    "userId": "642032441",
-    "defaultPrefix": "?"
-  },
-  "owner": {
-    "login": "8supa",
-    "userId": "675052240"
-  },
-  "auth": {
-    "twitch": {
-      "password": "Twitch Authorization",
-      "clientId": "Twitch Client-Id"
+    "bot": {
+        "login": "okey_bot",
+        "userId": "642032441",
+        "defaultPrefix": "?"
     },
-    "openweathermap": "OpenWeather API Key",
-    "tts": "",
-    "wolfram": "WolframAlpha AppID",
-    "supinic": {
-      "userId": "",
-      "key": ""
+    "owner": {
+        "login": "8supa",
+        "userId": "675052240"
     },
-    "bttv": "BTTV Authorization",
-    "7tv": "7TV Authorization",
-    "tenor": "Tenor API Key",
-    "discordWebhook": "Discord Webhook URL",
-    "database": {
-      "host": "127.0.0.1",
-      "user": "",
-      "pass": "",
-      "name": "Database Name",
-      "connectionLimit": 50
+    "auth": {
+        "twitch": {
+            "helix": {
+                "token": "[Required scopes: chat:read, chat:edit, whispers:read, whispers:edit, moderator:manage:banned_users] Use this for generating a custom scope token -> https://twitchtokengenerator.com/",
+                "clientId": "^^^"
+            },
+            "gql": {
+                "token": "OPTIONAL",
+                "clientId": "kimne78kx3ncx6brgo4mv6wki5h1ko"
+            }
+        },
+        "openweathermap": "OpenWeather API Key",
+        "tts": "",
+        "wolfram": "WolframAlpha AppID",
+        "supinic": {
+            "userId": "",
+            "key": ""
+        },
+        "bttv": "BTTV Authorization",
+        "7tv": "7TV Authorization",
+        "tenor": "Tenor API Key",
+        "discordWebhook": "Discord Webhook URL",
+        "database": {
+            "host": "127.0.0.1",
+            "user": "",
+            "pass": "",
+            "name": "Database Name",
+            "connectionLimit": 50
+        },
+        "spotify": {
+            "clientId": "",
+            "clientSecret": ""
+        },
+        "twitter": {
+            "bearer": ""
+        },
+        "uberduck": {
+            "key": "",
+            "secret": ""
+        }
     },
-    "spotify": {
-      "clientId": "",
-      "clientSecret": ""
-    },
-    "twitter": {
-      "bearer": ""
-    },
-    "uberduck": {
-      "key": "",
-      "secret": ""
+    "website": {
+        "url": "https://okey.supa.codes",
+        "port": 8484
     }
-  },
-  "website": {
-    "url": "https://okey.supa.codes",
-    "port": 8484
-  }
 }
