--- a/config_template.json
+++ b/config_template.json
@@ -19,7 +19,7 @@
                 "clientId": "kimne78kx3ncx6brgo4mv6wki5h1ko",
                 "sessionId": "",
                 "deviceId": "",
-                "version": ""
+                "version": "40ed6151-c4f8-4557-a261-c8615ff1c589"
             }
         },
         "openweathermap": "OpenWeather API Key",
